Foi resolvido o erro do z-index sobre a modal e o menu fixo do sistema

--- a/CSS/modal.css
+++ b/CSS/modal.css
@@ -1,4 +1,5 @@
 #modal-screen {
+  z-index: 19000;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.767);
